--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,10 +27,10 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: root
-      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: laravel_db_8i27
+      MYSQL_USER: laravel_db_8i27_user
+      MYSQL_PASSWORD: SO0eRHxAs97S4vbiTKvfxei3H0YlhsNZ
     volumes:
       - dbdata:/var/lib/mysql
 
